fix bg color for contrast

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-$primary:#706D65;
+$primary:#3D3C37;
 $secondary:#efe9d7;
 $success:     #F2DA91;
 $dark:         #706543;
